--- a/app/src/main/res/layout/activity_bus_rout.xml
+++ b/app/src/main/res/layout/activity_bus_rout.xml
@@ -1,17 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".BusRoutActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bus Routs List is shown here"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:id="@+id/top_bg"
+        android:background="@drawable/relative_bgg">
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/bus_stop"
+                    android:text=" Dhaka Bus"
+                    android:textColor="#fff"
+                    android:textSize="25sp"
+                    android:textStyle="bold">
+
+                </TextView>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="#3E4744"
+                android:backgroundTint="#3E4744"
+                android:orientation="horizontal">
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="10dp"
+                    android:orientation="vertical">
+
+
+                    <RelativeLayout
+                        android:id="@+id/middle_bg"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/top_bg"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center">
+
+
+                        <GridLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="30dp"
+                            android:layout_marginRight="30dp"
+                            android:columnCount="2"
+                            android:padding="5dp"
+                            android:useDefaultMargins="true">
+
+
+                            <com.google.android.material.card.MaterialCardView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                app:cardCornerRadius="10dp"
+                                android:backgroundTint="#EAE9E9"
+                                app:strokeColor="#3E4744"
+                                app:strokeWidth="3dp">
+
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical">
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_gravity="center"
+                                        android:layout_marginTop="10dp"
+                                        android:orientation="horizontal">
+
+
+                                        <TextView
+                                            android:text="Rojonigondha"
+                                            android:id="@+id/searchTextId"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="10dp"
+                                            android:textSize="20sp"
+                                            android:textStyle="bold" />
+
+
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_gravity="center"
+                                        android:orientation="horizontal"
+                                        android:padding="5dp">
+
+
+
+                                        <TextView
+                                            android:text="Chittagong Road - Ghatar Char"
+                                            android:id="@+id/busFareId"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="1"
+                                            android:textAlignment="center"
+                                            android:textColor="#3E4744"
+                                            android:textSize="15sp"
+                                            android:textStyle="bold" />
+
+
+                                    </LinearLayout>
+
+
+                                </LinearLayout>
+
+
+                            </com.google.android.material.card.MaterialCardView>
+
+
+                        </GridLayout>
+
+
+                    </RelativeLayout>
+
+
+
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
+
+
+
+
+
+
+
+<LinearLayout
+    android:paddingTop="40dp"
+    android:paddingBottom="70dp"
+    android:layout_width="match_parent"
+    android:layout_below="@id/top_bg"
+    android:layout_height="match_parent">
+
+
+    <ListView
+        android:overScrollMode="never"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="20dp"
+        android:scrollbars="none"
+        android:clipToPadding="false"
+        android:id="@+id/bus_details_route"
+        android:divider="@null"
+        android:listSelector="@android:color/transparent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:outlineSpotShadowColor="@color/black"/>
 </LinearLayout>
+
+
+
+
+
+
+
+
+
+</RelativeLayout>
