--- a/app/src/main/res/layout/activity_bus_rout.xml
+++ b/app/src/main/res/layout/activity_bus_rout.xml
@@ -101,8 +101,7 @@
 
 
                                         <TextView
-                                            android:text="Rojonigondha"
-                                            android:id="@+id/searchTextId"
+                                            android:id="@+id/busNameId"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_gravity="center"
